--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 /*
  * The MIT License
  *
- * Copyright 2011 Peter Kocsis <p. kocsis. 2. 7182 at gmail.com>.
+ * Copyright 2011 Peter Kocsis.
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
